* doc/extend.texi: Fix some more overfull hboxes.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49941 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-21  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* doc/extend.texi: Fix some more overfull hboxes.
+
 2002-02-21  Jakub Jelinek  <jakub@redhat.com>
 
 	PR optimization/4994
