--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-21  Aldy Hernandez  <aldyh@redhat.com>
+
+        * gcc.dg/attr-alwaysinline.c: New.
+
 2002-02-21  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.dg/20020220-1.c: New test.
