* gcc_release: Correct handling of diff-generation.  Add 	"diffs" major mode.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@49951 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_0-branch/contrib/ChangeLog
+++ b/gcc-3_0-branch/contrib/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-21  Mark Mitchell  <mark@codesourcery.com>
+
+	* gcc_release: Correct handling of diff-generation.  Add
+	"diffs" major mode.
+
 2002-02-20  Release Manager
 
 	* GCC 3.0.4 Released.
