--- a/maintainer-scripts/ChangeLog
+++ b/maintainer-scripts/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-21  Mark Mitchell  <mark@codesourcery.com>
+
+	* gcc_release: Correct handling of diff-generation.  Add
+	"diffs" major mode.
+
 2002-02-08  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* gcc_release: Substitute dates in snapshot-README and
