* configure.in (CXX_FOR_TARGET): Add -shared-libgcc for libstdc++-v3 and libjava.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49953 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-22  Alexandre Oliva  <aoliva@redhat.com>
+
+	* configure.in (CXX_FOR_TARGET): Add -shared-libgcc for
+	libstdc++-v3 and libjava.
+
 2002-02-11  Adam Megacz <adam@xwt.org>
 
 	* gcc/Makefile.in: Removed libstdc++-v3 dependancy for libjava and
