* acinclude.m4 (LIB_AC_PROG_CXX): Copied from libstdc++-v3. Use it. * Makefile.am (LIBLINK): Use CXX (and its tag) for linking. * aclocal.m4, configure, Makefile.in: Rebuilt.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49954 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,10 @@
+2002-02-22  Alexandre Oliva  <aoliva@redhat.com>
+
+	* acinclude.m4 (LIB_AC_PROG_CXX): Copied from libstdc++-v3.
+	Use it.
+	* Makefile.am (LIBLINK): Use CXX (and its tag) for linking.
+	* aclocal.m4, configure, Makefile.in: Rebuilt.
+
 2002-02-19  Tom Tromey  <tromey@redhat.com>
 
 	Fix for PR libgcj/5696:
