* langhooks.c: Include flags.h.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49955 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-21  Diego Novillo  <dnovillo@redhat.com>
+
+	* langhooks.c: Include flags.h.
+
 2002-02-21  Aldy Hernandez  <aldyh@redhat.com>
 
 	* testsuite/gcc.dg/attr-alwaysinline.c: New.
