* Makefile.in (langhooks.o): Update dependencies.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49956 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2002-02-21  Diego Novillo  <dnovillo@redhat.com>
 
+	* Makefile.in (langhooks.o): Update dependencies.
+
+2002-02-21  Diego Novillo  <dnovillo@redhat.com>
+
 	* langhooks.c: Include flags.h.
 
 2002-02-21  Aldy Hernandez  <aldyh@redhat.com>
