* fold-const.c (fold): Fix typo in comments.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49960 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-22  Richard Sandiford  <rsandifo@redhat.com>
+
+	* fold-const.c (fold): Fix typo in comments.
+
 2002-02-21  Diego Novillo  <dnovillo@redhat.com>
 
 	* Makefile.in (langhooks.o): Update dependencies.
