--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,9 @@
+2002-02-20  Per Bothner  <per@bothner.com>
+
+	* parse.y (patch_method_invocation): Set CAN_COMPLETE_NORMALLY on call
+	to finit$ (otherwise generate_bytecode_insns drops it). However, we
+	don't need to set it on the COMPOUND_EXPR - the caller does that.
+
 2002-02-20  Nic Ferrier  <nferrier@tapsellferrier.co.uk>
 
 	* gcj.texi: Option `--classpath' becomes `--CLASSPATH.'Option 
