PR c++/5748 	* stmt.c (expand_anon_union_decl): Set TREE_USED on the anon union 	decl if any of elements was TREE_USED.
	* g++.dg/opt/anonunion1.C: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49971 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-02-22  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/5748
+	* stmt.c (expand_anon_union_decl): Set TREE_USED on the anon union
+	decl if any of elements was TREE_USED.
+
 2002-02-22  Alexandre Oliva  <aoliva@redhat.com>
 
 	* config/sparc/sol2.h: Don't include sys/mman.h.
