--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-22  Jakub Jelinek  <jakub@redhat.com>
+
+	* g++.dg/opt/anonunion1.C: New test.
+
 2002-02-22  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* g++.dg/template/qualttp19.C: New test.
