* acinclude.m4 (CXX): AC_SUBST it, instead of glibcpp_CXX. * aclocal.m4, configure: Rebuilt.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49974 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-22  Alexandre Oliva  <aoliva@redhat.com>
+
+	* acinclude.m4 (CXX): AC_SUBST it, instead of glibcpp_CXX.
+	* aclocal.m4, configure: Rebuilt.
+
 2002-02-20  Per Bothner  <per@bothner.com>
 
 	* gnu/gcj/protocol/file/Connection.java (conect):  Open the input
