--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-22  David Edelsohn  <edelsohn@gnu.org>
+
+	* gcc.c (init_gcc_spec): Do not link with static libgcc.a if
+	gcc invoked with -shared-libgcc.
+
 2002-02-22  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/5748
