--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-23  Aldy Hernandez  <aldyh@redhat.com>
+
+        * config/rs6000/altivec.h: Add extra level of parentheses on casts.
+
 2002-02-22  David Edelsohn  <edelsohn@gnu.org>
 
 	* gcc.c (init_gcc_spec): Do not link with static libgcc.a if
