--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-23  Alexandre Oliva  <aoliva@redhat.com>
+
+	* Makefile.in, gcj/Makefile.in, include/Makefile.in: Rebuilt.
+	* testsuite/Makefile.in: Likewise.
+
 2002-02-20  Per Bothner  <per@bothner.com>
 
 	* java/net/URL.java (getPath):  New JDK 1.3 method.
