--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2002-02-23  David Edelsohn  <edelsohn@gnu.org>
 
+	* gcc.c (init_gcc_spec): Revert last change.
+
+2002-02-23  David Edelsohn  <edelsohn@gnu.org>
+
 	* config/rs6000/rs6000.md (load_toc_aix_{si,di}): Use
 	gpc_reg_operand constraint.
 
