PR optimization/5747 	* loop.c (scan_loop): Update reg info if move_movables created new 	pseudos.
	* gcc.dg/20020222-1.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49989 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-02-23  Jakub Jelinek  <jakub@redhat.com>
+
+	PR optimization/5747
+	* loop.c (scan_loop): Update reg info if move_movables created new
+	pseudos.
+
 2002-02-23  David Edelsohn  <edelsohn@gnu.org>
 
 	* gcc.c (init_gcc_spec): Revert last change.
