--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-23  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/20020222-1.c: New test.
+
 2002-02-22  Jakub Jelinek  <jakub@redhat.com>
 
 	* g++.dg/opt/anonunion1.C: New test.
