--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-23  Alexandre Oliva  <aoliva@redhat.com>
+
+	* Makefile.in (MAKEINFO): Don't assume makeinfo will be built just
+	because its Makefile is there; test for the executable instead.
+
 2002-02-22  Alexandre Oliva  <aoliva@redhat.com>
 
 	* configure.in (CXX_FOR_TARGET): Add -shared-libgcc for
