* doc/contribute.texi, doc/extend.texi, doc/install.texi, 	doc/invoke.texi, doc/md.texi, doc/passes.texi, doc/rtl.texi, 	doc/standards.texi, doc/tm.texi: Remove trailing whitespace.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49991 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-02-23  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* doc/contribute.texi, doc/extend.texi, doc/install.texi,
+	doc/invoke.texi, doc/md.texi, doc/passes.texi, doc/rtl.texi,
+	doc/standards.texi, doc/tm.texi: Remove trailing whitespace.
+
 2002-02-23  Jakub Jelinek  <jakub@redhat.com>
 
 	PR optimization/5747
