* cppinit.c (output_deps): Correct test for stdout output. 	(init_dependency_output): Cure warning.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49993 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-23  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* cppinit.c (output_deps): Correct test for stdout output.
+	(init_dependency_output): Cure warning.
+
 Sat Feb 23 08:42:47 2002  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
 	* expr.c (store_expr): When converting expression to promoted
