--- a/gcc/config/h8300/h8300.md
+++ b/gcc/config/h8300/h8300.md
@@ -2031,7 +2031,7 @@
    (set_attr "length" "6")])
 
 (define_insn ""
-  [(set (match_operand:SI 0 "register_operand" "=&r")
+  [(set (match_operand:SI 0 "register_operand" "=r")
 	(zero_extract:SI (match_operand:SI 1 "register_operand" "r")
 			 (const_int 1)
 			 (match_operand 2 "const_int_operand" "n")))]
@@ -2059,7 +2059,7 @@
    (set_attr "length" "6")])
 
 (define_insn ""
-  [(set (match_operand:SI 0 "register_operand" "=&r")
+  [(set (match_operand:SI 0 "register_operand" "=r")
 	(zero_extract:SI (xor:SI (match_operand:SI 1 "register_operand" "r")
 				 (match_operand 3 "const_int_operand" "n"))
 			 (const_int 1)
