* cppinit.c (merge_include_chains): Check for brack being 	NULL before attempting to merge it with qtail.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@49996 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_0-branch/gcc/ChangeLog
+++ b/gcc-3_0-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-23  Zack Weinberg  <zack@codesourcery.com>
+
+	* cppinit.c (merge_include_chains): Check for brack being
+	NULL before attempting to merge it with qtail.
+
 2002-02-20  Release Manager
 
 	* GCC 3.0.4 Released.
