* doc/cpp.texi, doc/invoke.texi: Update documentation for -MM.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49997 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-23  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* doc/cpp.texi, doc/invoke.texi: Update documentation for -MM.
+
 2002-02-23  Kazu Hirata  <kazu@hxi.com>
 
 	* config/h8300/h8300.c (output_simode_bld): Handle H8/300 and
