--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-24  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* testsuite/gcc.dg/cpp/wchar-1.c: New test.
+
 2002-02-23  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.dg/20020222-1.c: New test.
