--- a/libffi/ChangeLog
+++ b/libffi/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-24  Jeff Sturm  <jsturm@one-point.com>
+
+	* include/ffi.h.in: Add typedef for ffi_arg.
+	* src/ffitest.c (main): Declare rint with ffi_arg.
+ 
 2002-02-21  Andreas Tobler  <toa@pop.agri.ch>
 
 	* src/powerpc/ffi_darwin.c (ffi_prep_args): Skip appropriate
