--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2002-02-24 Craig Rodrigues  <rodrigc@gcc.gnu.org> 
+
+	PR c++/4093
+	* cp-tree.h (SET_BINFO_MARKED): Cast false part of condition
+	to void.
+
 2002-02-22  Jakub Jelinek  <jakub@redhat.com>
 
 	PR other/5746
